@@ -39,6 +39,7 @@ CHANGES
       built from it.
 
 - mssql
+    - Added in new types: MSVarBinary and MSImage. [ticket:1249]
     - Added in the MSReal and MSNText types.
 
 - bugfixes, behavioral changes
@@ -233,6 +234,11 @@ CHANGES
       new doc section "Custom Comparators".
     
 - mssql
+    - ``MSBinary`` now returns a ``BINARY`` instead of an
+      ``IMAGE``. This is a backwards incompatible change in that
+      ``BINARY`` is a fixed length data type whereas ``IMAGE`` is
+      a variable length data type. [ticket:1249]
+
     - ``get_default_schema_name`` is now reflected from the
       database based on the user's default schema. This only works
       with MSSQL 2005 and later. [ticket:1258]
